2001-11-04  Joshua Sled  <jsled@asynchronous.org>

	* src/gnome-utils/gnc-frequency.c: saving state and updating the
	calendar markings no longer force so much of a
	component-manager/UI refresh.

	* src/guile/gw-gnc-spec.scm: Changed sx-since-last return type to
	gboolean [bool]; added better sx-since-last-run-wrapper param name
	[s/foo/bookfile/].

	* src/gnome/dialog-scheduledxaction.c (new_button_clicked): Better
	initial-FreqSpec setup to prevent error from GNCFrequency.

	* src/engine/SchedXaction.c (xaccSchedXactionSetTemplateTrans):
	Added support for setting template-transaction currency from the
	TTinfo structure.

	* src/gnome/dialog-sxsincelast.c: Correct support for "nothing
	to do": if this is the case, don't load/create the UI.  Required
	much re-working due to my bad design. :(
	Added component-manager freeze/thaw [equivalents] around engine
	interaction to minimize program-wide GUI refresh during
	Transaction creation.
	(finish_finish): Added support for 'finish' button.
	(cancel_check): Initial support for cancel button, checking with
	user regarding.

2001-10-29  Joshua Sled  <jsled@asynchronous.org>

	* src/gnome/dialog-sxsincelast.c: Unused pages are skipped,
	initial version.

	* src/gnome/dialog-sx-from-trans.c: Added start date handling; as
	well, correctly update the start date when the frequency option
	changes.  Added using FreqSpecs for start date calculation.  Added
	correctly

	* src/gnome-utils/gnc-account-tree.c (gnc_account_tree_init): Make
	account-tree description column auto-resize.

	* src/engine/SchedXaction.c (xaccSchedXactionSetEndDate): Removed
	end date validity check; an invalid end date is how we signal "no
	end date".

2001-10-25  Dave Peticolas  <dave@krondo.com>

	* src/scm/Makefile.am: remove slib-backup.scm and startup.scm

	* src/scm/bootstrap.scm.in: remove out-of-date docs

	* src/scm/main.scm: load printing/print-check.scm

	* src/import-export/qif-import/Makefile.am: remove simple-obj.scm
